tests/baselines/reference/es6ImportDefaultBindingFollowedWithNamespaceBindingWithExport.errors.txt
tests/cases/compiler/client.ts(1,15): error TS2467: External module 'server' has no default export or export assignment.


==== tests/cases/compiler/server.ts (0 errors) ====
    
    export var a = 10;
    
==== tests/cases/compiler/client.ts (1 errors) ====
    export import defaultBinding, * as nameSpaceBinding  from "server";
                  ~~~~~~~~~~~~~~
!!! error TS2467: External module 'server' has no default export or export assignment.
    export var x: number = nameSpaceBinding.a;